fix: headlines wrapping and icon
improved text wrapping for longer headlines and added an icon to send a message

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ h1 {
     padding: 0 0 2rem 0;
     text-align: center;
     hyphens: auto;
+    text-wrap: balance;
 
     @media (min-width: 400px) {
         font-size: 4rem;
@@ -99,6 +100,7 @@ h2 {
     font-size: 2rem;
     line-height: 1.1;
     margin: 2rem 0;
+    text-wrap: balance;
 }
 
 h3 {
@@ -106,6 +108,7 @@ h3 {
     font-size: 1.5rem;
     line-height: 1.2;
     margin: 0;
+    text-wrap: balance;
 }
 
 strong {
